# diffutils_work

./: .gitignore  Cargo.toml  todo.md
benches/: bench-criterion.rs  bench-diffutils.rs  benchmarks-cmp.rs
src/: arg_parser.rs  cmp.rs  cmp_org.rs  diff.rs  diff3.rs  lib.rs  main.rs  params_gen.rs  sdiff.rs  side_diff.rs  utils.rs
src/cmp/: params.rs  params_cmp.rs  params_cmp_def.rs
src/diff3/: params_diff3.rs  params_diff3_def.rs
src/sdiff/: params_sdiff.rs  params_sdiff_def.rs
src/uu/cmp/: Cargo.toml
src/uu/cmp/benches/: cmp_bench.rs
src/uu/cmp/src/: cmp.rs  main.rs  params_cmp.rs
src/uu/diff/: Cargo.toml
src/uu/diff/benches/: diff_bench.rs
src/uu/diff/src/: context_diff.rs  diff.rs  ed_diff.rs  lib.rs  main.rs  normal_diff.rs  params.rs  side_diff.rs  unified_diff.rs
src/uu/diff3/: Cargo.toml
src/uu/diff3/src/: diff3.rs  main.rs  params_diff3.rs
src/uu/sdiff/: Cargo.toml
src/uu/sdiff/src/: main.rs  params_sdiff.rs  sdiff.rs
src/uudiff/: Cargo.toml
src/uudiff/src/lib/: lib.rs  macros.rs  mods.rs
src/uudiff/src/lib/mods/: arg_parser.rs  utils.rs
tests/: integration.rs
tools/app_option_generator/: Cargo.toml  diff_help
tools/app_option_generator/src/: main.rs  test.rs
