[package]
name = "uu_diff"
description = "diff ~ (uutils) decode/encode input (diff file compare)"
repository = "https://github.com/uutils/diffutils/tree/main/src/uu/sdiff"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true

# [lints]
# workspace = true

[[bin]]
name = "diff"
path = "src/main.rs"

# [lib]
# path = "src/sdiff.rs"

[dependencies]
const_format = { workspace = true }
diff_crate = { workspace = true }
uudiff = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]


# [[bench]]
# name = "sdiff_bench"
# harness = false
